更新：移除spring相关依赖

--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -102,11 +102,17 @@
             <version>${postgresql.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- mysql 驱动 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>test</scope>
             <version>${mysql.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.28</version>
         </dependency>
         <!-- druid 官方 starter -->
         <dependency>
