--- a/wind-core/src/test/resources/application-mysql.yml
+++ b/wind-core/src/test/resources/application-mysql.yml
@@ -1,10 +1,10 @@
-mysql:
-  datasource:
+# 自动建表
+wind:
+  ddl-auto: update
+  # entity所在包路径,多个以,分割
+  entity-package: io.github.ramerf.wind.core.mysql
+  data-source-config:
     url: jdbc:mysql:///wind?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&reWriteBatchedInserts=true&useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
-# 自动建表
-ddl-auto: update
-# entity所在包路径,多个以,分割
-entity-package: io.github.ramerf.wind.core.mysql
