--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -98,6 +98,13 @@
             <scope>compile</scope>
             <version>5.0.12.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
