--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -14,7 +14,7 @@
     <version>4.0.7</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <postgresql.version>42.2.18</postgresql.version>
+        <postgresql.version>42.3.3</postgresql.version>
         <mysql.version>8.0.16</mysql.version>
         <druid.version>1.2.8</druid.version>
     </properties>
@@ -79,6 +79,12 @@
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.8.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
