--- a/wind-core/src/test/resources/application-pgsql.yml
+++ b/wind-core/src/test/resources/application-pgsql.yml
@@ -1,13 +1,12 @@
-spring:
-  profiles:
-    active: pgsql
-  datasource:
-    url: jdbc:postgresql:///wind?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&reWriteBatchedInserts=true
-    username: postgres
-    password: 123456
-    driver-class-name: org.postgresql.Driver
 wind:
   # 自动建表
   ddl-auto: update
   # entity所在包路径,多个以,分割
   entity-package: io.github.ramerf.wind.core.pgsql
+  data-source:
+    transaction-factory: io.github.ramerf.wind.core.jdbc.transaction.managed.JdbcTransactionFactory
+    druid:
+      url: jdbc:postgresql://localhost:5432/wind_refactor?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&reWriteBatchedInserts=true
+      username: postgres
+      password: 123456
+      driver-class-name: org.postgresql.Driver
