--- a/wind-core/src/test/resources/mysql.yml
+++ b/wind-core/src/test/resources/mysql.yml
@@ -3,8 +3,10 @@ wind:
   ddl-auto: update
   # entity所在包路径,多个以,分割
   entity-package: io.github.ramerf.wind.core.mysql
-  data-source-config:
-    url: jdbc:mysql:///wind?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&reWriteBatchedInserts=true&useSSL=false
-    username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  data-source:
+    transaction-factory: io.github.ramerf.wind.core.jdbc.transaction.jdbc.JdbcTransactionFactory
+    druid:
+      url: jdbc:mysql:///wind?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&reWriteBatchedInserts=true&useSSL=false
+      username: root
+      password: root
+      driver-class-name: com.mysql.cj.jdbc.Driver
