--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -38,6 +38,16 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zsoltfabok</groupId>
+            <artifactId>sqlite-dialect</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!-- snakeyaml -->
         <dependency>
             <groupId>org.yaml</groupId>
