--- a/wind-core/pom.xml
+++ b/wind-core/pom.xml
@@ -42,11 +42,7 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.36.0.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.zsoltfabok</groupId>
-            <artifactId>sqlite-dialect</artifactId>
-            <version>1.0</version>
+            <scope>test</scope>
         </dependency>
         <!-- snakeyaml -->
         <dependency>
