修复：配置多个拦截器时失效

--- a/wind-spring/pom.xml
+++ b/wind-spring/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>io.github.ramerf</groupId>
             <artifactId>wind-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
