--- a/wind-spring-boot-starter/pom.xml
+++ b/wind-spring-boot-starter/pom.xml
@@ -30,7 +30,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <version>${spring-boot.version}</version>
-            <!--            <optional>true</optional>-->
+            <optional>true</optional>
         </dependency>
     </dependencies>
     <build>
