--- a/wind-demo/wind-demo-spring-boot/src/main/resources/application.yml
+++ b/wind-demo/wind-demo-spring-boot/src/main/resources/application.yml
@@ -23,15 +23,11 @@ wind:
   #  逻辑已删除值
   #  deleted: true
   entity-package: io.github.ramerf.wind.demo.entity.pojo
-  #  拦截器所在包路径,多个以,分割
-  #  interceptor-package:
-  #  类型处理器路径,多个以,分割
-  #  type-handler-package:
   #  批量操作时,每次处理的大小
   batch-size: 500
   #  表更新模式
   ddl-auto: update
   #  新增/更新时写入值为null的属性,默认写入所有字段
   #  write-null-prop: true
-  #  指定UpdateTimestamp注解的更新策略,默认总是赋值为当前时间
+  #  指定UpdateTimestamp注解的更新策略,默认总是赋值为当前时间;设置NULL时表示仅字段为空时设置为当前时间
   update-time-strategy: always
